[package]
name = "viggo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bio = "2.3.0"
clap = { version = "4.5.38", features = ["derive"] }
num_cpus = "1.16.0"
tikv-jemallocator = "0.5"
rust-htslib = "0.49.0"
crossbeam = "0.8.4"
indexmap = "2.12.0"
itoa = "1.0.15"

[profile.release]
# debug = true
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
