[package]
name = "pileup-hi"
version = "0.9.2"
edition = "2021"
authors = ["Eli Piliper <epiliper@outlook.com>"]
description = "High-throughput, extensible SAM/BAM pileup generator"
license-file = "LICENSE"
homepage = "https://github.com/epiliper/pileup-hi"
categories = ["science", "bam", "bioinformatics", "command-line-utilities"]
keywords  = ["bam", "sequencing", "bioinformatics", "variant"]
readme = "README.md"
exclude = ["vendor/*"]

[[bin]]
name = "pileuphi"
path = "src/main.rs"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3.32"

[badges]
maintenance = { status = "actively_developed" }

[dependencies]
bio = "2.3.0"
clap = { version = "4.5.38", features = ["derive", "cargo"] }
num_cpus = "1.16.0"
tikv-jemallocator = "0.5"
rust-htslib = "0.49.0"
indexmap = "2.12.0"
itoa = "1.0.15"
ctrlc = { version = "3.5.1", features = ["termination"] }
log = "0.4.29"
env_logger = "0.11.8"
crossbeam = "0.8.4"

[profile.dev]
overflow-checks = false

[profile.release]
# debug = true
debug = false
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
